print: added missing button label

--- a/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
@@ -74,7 +74,7 @@
         
         <div id="layers"></div>
         <input type="submit" style="display: none"/>
-        <input type="button" class="printSubmit hidden" value="Print"/>
+        <input type="button" class="printSubmit hidden" value="{{ 'mb.core.printclient.popup.btn.ok' | trans }}"/>
     
     </form>
     {% if configuration.type == 'element' %}
