--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/search_router.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/search_router.html.twig
@@ -7,6 +7,10 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.timeout) }}{{ form_widget(form.configuration.timeout) }}
     <div class="clearContainer"></div>
+    {{ form_label(form.configuration.width) }}{{ form_widget(form.configuration.width) }}
+    <div class="clearContainer"></div>
+    {{ form_label(form.configuration.height) }}{{ form_widget(form.configuration.height) }}
+    <div class="clearContainer"></div>
     {{ form_label(form.configuration.routes) }}{{ form_widget(form.configuration.routes) }}
 
     {#-
