--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_result_table.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_result_table.scss
@@ -57,6 +57,11 @@
         &.even {
           background-color: #EBEBEB;;
         }
+
+        &.warning{
+          background-color: lighten($selectColor,10%);
+        }
+
         &:hover{
           background-color: $selectColor;
         }
@@ -99,7 +104,9 @@
           &.selection {
             padding-top: 0;
             > input[type="checkbox"] {
-              margin-top: 0;
+              margin: 0 auto;
+              line-height: auto;
+              vertical-align: middle;
             }
           }
 
