Improve SearchRouter table header padding

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/search_router.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/search_router.scss
@@ -21,6 +21,7 @@ $searchRouterInputWidth:100%;
   th{
     @extend .subTitle;
     text-align:left;
+    padding-right: 3px;
   }
   td{padding-right:$space/2;}
   tr{@extend .linkButton}
