--- a/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
@@ -1,8 +1,7 @@
 <div id="{{ id }}" class="mb-element mb-element-printclient" title="{{ title |trans }}">
     
     {%  if configuration['type'] is defined and configuration.type == 'element' %}
-        <input type="button" id="printToggle" active="false" value="{{ 'mb.core.printclient.btn.activate' | trans }}"/>
-        <div class="printElement hidden">
+        <input type="button" class="button" id="printToggle" active="false" value="{{ 'mb.core.printclient.btn.activate' | trans }}"/>
         <br>    
     {% endif %}
     
@@ -74,10 +73,7 @@
         
         <div id="layers"></div>
         <input type="submit" style="display: none"/>
-        <input type="button" class="printSubmit hidden" value="{{ 'mb.core.printclient.popup.btn.ok' | trans }}"/>
+        <input type="button" class="button printSubmit hidden" value="{{ 'mb.core.printclient.popup.btn.ok' | trans }}"/>
     
     </form>
-    {% if configuration['type'] is defined and configuration.type == 'element' %}
-        </div>
-    {% endif %}    
 </div>
