Fix search router element input label (title)

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/search_router.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/search_router.scss
@@ -3,7 +3,8 @@ $searchRouterInputWidth:100%;
   display: block;
 
   .labelInput{
-    width:90px;
+    width:auto;
+    line-height: 14px;
     font-weight: normal;
     margin-bottom: 0;
     /*float:left;*/
