--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/search_router.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/search_router.scss
@@ -16,8 +16,51 @@ $searchRouterInputWidth:100%;
   }
   .dropdown{min-width:$searchRouterInputWidth;}
   .ui-helper-hidden-accessible{display: none;}
-  .search-results{
+  .search-results {
     overflow-y: auto;
+    overflow-x: hidden;
+    > .result-counter{
+      margin-bottom: 2px;
+    }
+    > table {
+      margin-top: 2px;
+      margin-bottom: 5px;
+      > thead {
+        background-color: #c0c0c0;
+        > th {
+          padding-left: 3px;
+          padding-right: 3px;
+          text-align: left;
+          font-size: 11px;
+          font-weight: bold;
+        }
+      }
+      tr {
+        border-bottom: 1px solid #d3d3d3;
+        &.odd {
+          background-color: #f1f1f1;
+        }
+        &.even {
+          background-color: #ffffff;
+        }
+        &:hover {
+          background-color: lighten(#578e2a, 30%);
+          color: #fff;
+        }
+        td {
+          padding-left: 2px;
+          padding-right: 2px;
+        }
+      }
+    }
+  }
+  .search-action-buttons {
+    a.button {
+      text-decoration: none;
+      &:hover, &:active, &:focus {
+        color: #fff;
+      }
+    }
   }
   th{
     @extend .subTitle;
