--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/search_router.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/search_router.scss
@@ -36,6 +36,7 @@ $searchRouterInputWidth: 100%;
           text-align: left;
           font-size: 11px;
           font-weight: bold;
+          white-space: nowrap;
         }
       }
       tr {
