--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/search_router.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/search_router.scss
@@ -28,6 +28,7 @@ $searchRouterInputWidth: 100%;
     > table {
       margin-top: 2px;
       margin-bottom: 5px;
+      width: 100%;
       > thead {
         background-color: #c0c0c0;
         > th {
