--- a/src/Mapbender/ManagerBundle/Resources/public/sass/element/simplesearch.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/element/simplesearch.scss
@@ -1,5 +1,8 @@
-@import "libs/variables";
-@import "libs/mixins";
+.elementFormSimpleSearch{
+  $label:110px;
+  .labelInput{width:$label;}
+  .inputWrapper, .dropdown{width:70%;}
+}
 
 .sidePane, .toolBar {
   .mb-element-simplesearch {
