--- a/src/Mapbender/ManagerBundle/Resources/public/sass/element/simplesearch.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/element/simplesearch.scss
@@ -1,10 +1,52 @@
-.elementFormSimpleSearch{
-  $label:110px;
-  .labelInput{width:$label;}
-  .inputWrapper, .dropdown{width:70%;}
+.elementFormSimpleSearch {
+  $label: 110px;
+  .labelInput {
+    width: $label;
+  }
+  .inputWrapper, .dropdown {
+    width: 70%;
+  }
 }
 
-.sidePane, .toolBar {
+.sidePane {
+  .mb-element-simplesearch {
+    .autocompleteWrapper {
+      width: 100%;
+      position: relative;
+      input.searchterm {
+        width: 100%;
+      }
+      .autocompleteList {
+        display: block !important;
+        width: 100%;
+        position: relative;
+        z-index: 20000;
+        background-color: #FFF;
+        color: #858585;
+        cursor: pointer;
+        max-width: 100%;
+        li {
+          padding-left: 5px;
+          width: 100%;
+          text-align: left;
+          display: list-item;
+          font-size: 11px;
+
+          &:hover {
+            color: #5b932a;
+            background-color: #f9f9f9;
+          }
+          &:last-child {
+            clear: both;
+          }
+        }
+      }
+    }
+  }
+}
+
+
+.toolBar {
   .mb-element-simplesearch {
     .autocompleteWrapper {
       position: relative;
@@ -40,14 +82,6 @@
   }
 }
 
-.sidePane .mb-element-simplesearch {
-  .autocompleteWrapper {
-    width: 100%;
-    input.searchterm {
-      width: 100%;
-    }
-  }
-}
 
 .mobilePane {
 
