--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/zoombar.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/zoombar.scss
@@ -1,3 +1,27 @@
+@mixin opacityAlpha($alpha) {
+  /* Required for IE 5, 6, 7 */
+  /* ...or something to trigger hasLayout, like zoom: 1; */
+
+  /* Theoretically for IE 8 & 9 (more valid) */
+  /* ...but not required as filter works too */
+  /* should come BEFORE filter */
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100);
+
+  /* This works in IE 8 & 9 too */
+  /* ... but also 5, 6, 7 */
+  filter: alpha(opacity=$alpha*100);
+
+  /* Older than Firefox 0.9 */
+  -moz-opacity:$alpha;
+
+  /* Safari 1.x (pre WebKit!) */
+  -khtml-opacity: $alpha;
+
+  /* Modern!
+  /* Firefox 0.9+, Safari 2?, Chrome any?
+  /* Opera 9+, IE 9+ */
+  opacity: $alpha;
+}
 
 .mb-element-zoombar{
   &.iconMove:before{
@@ -28,9 +52,17 @@
     @include frontendContainerStyle();
 
     & > li{margin:3px 0;}
-    
-    .iconBig{
-        padding-left: 31px;
+
+    .iconBig {
+      padding-left: 31px;
+      &:before {
+        @include opacityAlpha(0.7);
+      }
+      &:hover {
+        &:before {
+          @include opacityAlpha(1);
+        }
+      }
     }
     
   }
