--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/manager.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/manager.scss
@@ -23,6 +23,31 @@ $navWidth:200px;
 $pageWidth:$contentPaneWidth + $navWidth;
 
 
+@mixin opacityAlpha($alpha) {
+  /* Required for IE 5, 6, 7 */
+  /* ...or something to trigger hasLayout, like zoom: 1; */
+
+  /* Theoretically for IE 8 & 9 (more valid) */
+  /* ...but not required as filter works too */
+  /* should come BEFORE filter */
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100);
+
+  /* This works in IE 8 & 9 too */
+  /* ... but also 5, 6, 7 */
+  filter: alpha(opacity=$alpha*100);
+
+  /* Older than Firefox 0.9 */
+  -moz-opacity:$alpha;
+
+  /* Safari 1.x (pre WebKit!) */
+  -khtml-opacity: $alpha;
+
+  /* Modern!
+  /* Firefox 0.9+, Safari 2?, Chrome any?
+  /* Opera 9+, IE 9+ */
+  opacity: $alpha;
+}
+
 // ------------------------------------------------------------------------ PAGE
 .page{
   position:relative;
@@ -156,7 +181,16 @@ $pageWidth:$contentPaneWidth + $navWidth;
 // ----------------------------------------------------------------- PAGE CENTER
 .contentPane{
   $top:$space*5;
-
+  .iconBig{
+    &:before{
+      @include opacityAlpha(0.7);
+    }
+    &:hover{
+      &:before{
+        @include opacityAlpha(1);
+      }
+    }
+  }
   padding-top:$top + $space;
 
   & > .content{
