fix copy application

--- a/src/Mapbender/ManagerBundle/Resources/views/Application/export-form.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/export-form.html.twig
@@ -2,8 +2,8 @@
   <div class="defaultForm elementForm">
     {{ form_label(form.format) }}{{ form_widget(form.format) }}
     <div class="clearContainer"></div>
-    <label class="left labelInput" for="{{ form.applications.vars.id }}">{{"form.manager.admin.application.export.application" | trans}}:<span class="required">*</span></label>
-    {{ form_widget(form.applications, { 'attr': { 'size': '10' }}) }}
+    <label class="left labelInput" for="{{ form.application.vars.id }}">{{"form.manager.admin.application.export.application" | trans}}:<span class="required">*</span></label>
+    {{ form_widget(form.application, { 'attr': { 'size': '10' }}) }}
     <div class="clearContainer"></div>
   </div>
   <div class="clearContainer"></div>
