Fix overview map navigation in IE9

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/overview.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/overview.scss
@@ -12,6 +12,12 @@
     @extend .buttonCore;
     @include border-radius($radius);
   }
+
+  .olControlOverviewMapExtentRectangle {
+    cursor: move;
+    background-image: url("bundles/mapbendercore/mapquery/lib/openlayers/img/blank.gif");
+  }
+
   .olMap {
     background-color: white;
     @include transition(width .2s linear);
