Display elements by edit which has ACL in different color

--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/manager.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/manager.scss
@@ -373,3 +373,8 @@ div[data-type="datetime"] div:last-child div.dropdown{
   display: inline-block;
   margin-right: 3px;
 }
+
+.secureElement.has:before {
+  color: $buttonCriticalSecondColor;
+  font-weight: bold;
+}
