--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
@@ -40,8 +40,12 @@
                   <span class="iconEdit editElement iconSmall"
                         title="{{"mb.manager.admin.element.edit"|trans}}  {{element.title}}"
                         data-url="{{ path('mapbender_manager_element_edit', {'slug': application.slug, 'id': element.id})}}"></span>
-                  <span class="iconKey secureElement {% if aclManager.hasObjectAclEntries(element) %}has {% endif %}iconSmall" data-attr=""
-                        title="{{"mb.manager.managerbundle.acl_element"|trans}}  {{element.title}}"
+                  <span class="iconKey secureElement {% if aclManager.hasObjectAclEntries(element) %}has {% endif %}iconSmall"
+                        title="{{ "mb.manager.managerbundle.acl_element"|trans }}  {{ element.title }}
+
+{% for acl in aclManager.getObjectAclEntriesAsArray(element) %}
+{{acl.type}}: {{ acl.name }}
+{% endfor %}"
                         data-url="{{ path('mapbender_manager_element_security', {'slug': application.slug, 'id': element.id })}}"></span>
                   <span class="iconRemove removeElement iconSmall"
                         title="{% trans with {'%element_title%': element.title} %} mb.manager.be.element.delete {% endtrans %}"
