Fix display workflow buttons by editing of application element ACL

--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/manager.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/manager.scss
@@ -368,3 +368,9 @@ div[data-type="datetime"] div:last-child div.dropdown{
   color: $buttonCriticalSecondColor;
   font-weight: bold;
 }
+
+.popup {
+  .button.hidden {
+    display: none;
+  }
+}
