Simplify translations from XML to YAML hierarchical structure

--- a/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
@@ -28,7 +28,7 @@
         <li id="tabLayout" class="tab">{{"mb.manager.admin.application.layouts" | trans }}</li>
         <li id="tabLayers" class="tab">{{"mb.manager.admin.application.layersets" | trans }}</li>
         <li id="tabCustomCss" class="tab">{{"mb.manager.admin.application.custom_css" | trans }}</li>
-        <li id="tabSecurity" class="tab">{{"mb.manager.admin.application.security" | trans }}</li>
+        <li id="tabSecurity" class="tab">{{"mb.manager.admin.application.security.title" | trans }}</li>
       </ul>
       <div id="containerBaseData" class="container active containerBaseData">
         <div class="left">{% include 'MapbenderManagerBundle:Application:form-basic.html.twig' %}</div>
