--- a/src/Mapbender/ManagerBundle/Resources/views/Application/new.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/new.html.twig
@@ -1,7 +1,7 @@
 {% set application = {'slug': 'manager'} %}
 {% extends "FOMManagerBundle::manager.html.twig" %}
 
-{% block title %}{{ "mb.manager.admin.application.new" | trans}}{% endblock %}
+{% block title %}{{ "mb.manager.admin.application.new.title" | trans}}{% endblock %}
 
 {% block js %}
   {{parent()}}
@@ -14,7 +14,7 @@
     <div id="applicationTabContainer" class="tabContainer applicationTabContainer">
       <ul class="tabs">
         <li id="tabBaseData" class="tab active">{{"mb.manager.admin.application.new.base_data" | trans }}</li>
-        <li id="tabSecurity" class="tab">{{"mb.manager.admin.application.security" | trans }}</li>
+        <li id="tabSecurity" class="tab">{{"mb.manager.admin.application.security.title" | trans }}</li>
       </ul>
       <div id="containerBaseData" class="container active containerBaseData">
           <div class="left">
