Migrate print admin translations

--- a/src/Mapbender/PrintBundle/Resources/views/ElementAdmin/printclient.html.twig
+++ b/src/Mapbender/PrintBundle/Resources/views/ElementAdmin/printclient.html.twig
@@ -7,11 +7,11 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.scales) }}{{ form_widget(form.configuration.scales) }}
     <div class="clearContainer"></div>
-    {{ form_widget(form.configuration.rotatable) }}<label for="{{form.configuration.rotatable.vars.id}}" class="labelCheck">{{"mb.core.admin.printclient.label.rotatable"|trans}}</label>
+    {{ form_widget(form.configuration.rotatable) }}<label for="{{form.configuration.rotatable.vars.id}}" class="labelCheck">{{"mb.print.client.admin.rotatable"|trans}}</label>
     <div class="clearContainer"></div>
-    {{ form_widget(form.configuration.legend) }}<label for="{{form.configuration.legend.vars.id}}" class="labelCheck">{{"mb.core.admin.printclient.label.legend"|trans}}</label>
+    {{ form_widget(form.configuration.legend) }}<label for="{{form.configuration.legend.vars.id}}" class="labelCheck">{{"mb.print.client.admin.legend"|trans}}</label>
     <div class="clearContainer"></div>
-    {{ form_widget(form.configuration.legend_default_behaviour) }}<label for="{{form.configuration.legend_default_behaviour.vars.id}}" class="labelCheck">{{"mb.core.admin.printclient.label.legend_default_behaviour"|trans}}</label>
+    {{ form_widget(form.configuration.legend_default_behaviour) }}<label for="{{form.configuration.legend_default_behaviour.vars.id}}" class="labelCheck">{{"mb.print.client.admin.legend_default_behaviour"|trans}}</label>
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.file_prefix) }}{{ form_widget(form.configuration.file_prefix) }}
     <div class="clearContainer"></div>
