change layername, change translations

--- a/src/Mapbender/CoreBundle/Resources/views/metadata.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/metadata.html.twig
@@ -26,7 +26,7 @@
         <div class="tabContainerAlt metadataContainer">
             <ul class="tabs">
             {% for section in metadata.sections %}
-                {% set vt=prefix~section.title %}
+                {% set vt=prefix~section.title~ "._title" %}
                 <li id="tab{{loop.index}}" class="tab{% if loop.first %} active{% endif %}">{{ vt | trans}}</li>
             {% endfor %}
             </ul>
@@ -46,7 +46,7 @@
         {% elseif metadata.container == 'accordion' %}
         <div class="accordionContainer metadataContainer">
             {% for section in metadata.sections %}
-                {% set vt=prefix~section.title~ ".title" %}
+                {% set vt=prefix~section.title~ "._title" %}
                 <div id="accordion{{ loop.index }}" class="accordion{% if loop.first %} active{% endif %}">
                     <div class="tablecell">{{ vt | trans }}</div>
                 </div>
