--- a/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
@@ -41,7 +41,7 @@
     {% set name = 'sidepane' %}
     {% if application.elements[name] is defined %}
       {% set region = application.elements[name] %}
-      {% set properties = region_props[name].properties %}
+      {% set properties = region_props[name].properties|default({}) %}
       {% set align = properties.align|default('left') %}
 
       <div id="{{ name }}"  class="clear sidePane {{ align }}" {% if properties.width is defined %} style="width: {{ properties.width }}"{% endif %}>
